--- a/ParkingPal/Info.plist
+++ b/ParkingPal/Info.plist
@@ -57,5 +57,11 @@
 		<string>googlechromes</string>
 		<string>comgooglemaps</string>
 	</array>
+    <key>NSAppTransportSecurity</key>
+    <dict>
+        <!--Connect to anything (this is probably BAD)-->
+        <key>NSAllowsArbitraryLoads</key>
+        <true/>
+    </dict>
 </dict>
 </plist>
